<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/createPlaylistForMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:minHeight="50dp"
        android:background="@color/vibe_blue"
        android:textColor="@color/white"
        android:text="@string/create_playlist_for_me"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/textViewListExplanation"
        android:layout_centerHorizontal="true"
        android:onClick="createStartingPlaylist"/>

    <Button
        android:id="@+id/selectStartingPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:minWidth="250dp"
        android:minHeight="50dp"
        android:background="@color/sky_blue"
        android:textColor="@color/white"
        android:text="@string/select_starting_playlist"
        android:layout_below="@+id/textViewListExplanation"
        android:layout_alignLeft="@+id/createPlaylistForMeButton"
        android:layout_alignStart="@+id/createPlaylistForMeButton"
        android:onClick="selectStartingPlaylist" />

    <TextView
        android:id="@+id/textViewSetupList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/set_up_list_songs"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewListExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/list_creation_explanation"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>