<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <include android:id="@+id/mytoolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/playlistCreateButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:layout_below="@+id/mytoolbar"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout">

        <Button
            android:id="@+id/createPlaylistForMeButton"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:background="@drawable/shape"
            android:textColor="@color/vibe_border"
            android:text="@string/create_playlist_for_me"
            android:textAllCaps="false"
            android:onClick="createPlaylistFromUserFavorites" />

        <Button
            android:id="@+id/artistRadioButton"
            android:onClick="getArtistRadioTracks"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/shape"
            android:textColor="@color/vibe_border"
            android:text="@string/VIBE_APP_ARTIST_RADIO"
            android:textAllCaps="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewListExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VIBE_APP_CREATE_FROM_OWN_MUSIC"
        android:textColor="@color/vibe_white"
        android:layout_below="@+id/playlistCreateButtonsLayout"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/textViewListExplanation"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/selectStartingPlaylistButton"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:background="@drawable/shape"
            android:textColor="@color/vibe_border"
            android:text="@string/VIBE_APP_MY_MUSIC"
            android:textAllCaps="false"
            android:onClick="selectListFromUserPlaylists"/>

        <Button
            android:id="@+id/lastTimeJukebox"
            android:onClick="startLastTimeJukebox"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/shape"
            android:textColor="@color/vibe_border"
            android:text="@string/VIBE_APP_CONTINUE_PREVIOUS_JUKEBOX"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>